Agentforce/force-app/main/default/objects/FOI__c/FOI__c.object-meta.xml
<CustomObject>
    <description>AD-65 - Create FOI Object</description>
    <label>FOI</label>
    <nameField>
        <label>FOI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FOI</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>