Agentforce/force-app/main/default/objects/FOI__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account Corporate Type does not match</errorMessage>
        <filterItems>
            <field>$Source.Corporate_Type__c</field>
            <operation>equals</operation>
            <valueField>Account.Corporate_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FOI</relationshipLabel>
    <relationshipName>FOI</relationshipName>
    <type>Lookup</type>
</CustomField>