Agentforce/force-app/main/default/objects/FOI__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>AD-68 - Capture the date the FOI record has been closed</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>