Agentforce/force-app/main/default/objects/FOI__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>AD-68 - Add Closed Reasons</description>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Pending Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>