Agentforce/force-app/main/default/objects/FOI__c/fields/Competitor_Services_Created__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Services_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor Services Created</label>
    <type>Checkbox</type>
</CustomField>