Agentforce/force-app/main/default/objects/FOI__c/fields/FOI_No__c.field-meta.xml
<CustomField>
    <fullName>FOI_No__c</fullName>
    <description>Used to identify FOI Record</description>
    <displayFormat>FOI-{000000}</displayFormat>
    <label>FOI No</label>
    <type>AutoNumber</type>
</CustomField>