Agentforce/force-app/main/default/objects/FOI__c/fields/FOICaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>FOICaseSafeID__c</fullName>
    <description>CaseSafeID for FOI</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FOICaseSafeID</label>
    <type>Text</type>
</CustomField>