Agentforce/force-app/main/default/objects/FOI__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-65 - Add lookup from FOI to Lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>FOIs</relationshipLabel>
    <relationshipName>FOIs</relationshipName>
    <type>Lookup</type>
</CustomField>