Agentforce/force-app/main/default/objects/FOI__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-65 - Stores the Opportunity that this FOI looks up to. This will be transferred over on Lead Conversion</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>FOI</relationshipLabel>
    <relationshipName>FOI</relationshipName>
    <type>Lookup</type>
</CustomField>