Agentforce/force-app/main/default/objects/FOI__c/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <description>AD-67 - Tracks the date in which the FOI was received</description>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>