Agentforce/force-app/main/default/objects/FOI__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>AD-65 - Add FOI statuses</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Submission</fullName>
                <default>true</default>
                <label>Pending Submission</label>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Review</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>