Agentforce/force-app/main/default/objects/FOI__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>AD-66 - Track the FOI submitted date</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>