Agentforce/force-app/main/default/objects/FOI__c/validationRules/Received_Date_Post_Submission_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Received_Date_Post_Submission_Date</fullName>
    <active>false</active>
    <description>Received Date must be on or after Submission Date</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
AND
(
  ISPICKVAL(Status__c, &apos;Awaiting Review&apos;),
  Received_Date__c &lt; Submitted_Date__c
)
)</errorConditionFormula>
    <errorDisplayField>Received_Date__c</errorDisplayField>
    <errorMessage>The Received Date must be on or after the Submitted Date.</errorMessage>
</ValidationRule>