Agentforce/force-app/main/default/objects/FOI__c/validationRules/Received_Date_Post_Submisson_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Received_Date_Post_Submisson_Status</fullName>
    <active>true</active>
    <description>Received Date can only be populated after it has been submitted</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
AND
(
ISPICKVAL( Status__c , &apos;Pending Submission&apos;),
NOT(ISBLANK(Received_Date__c))
)
)</errorConditionFormula>
    <errorDisplayField>Received_Date__c</errorDisplayField>
    <errorMessage>The Received Date can not be completed when the FOI has not been submitted.</errorMessage>
</ValidationRule>