Agentforce/force-app/main/default/objects/FOI__c/validationRules/Requires_Received_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Requires_Received_Date</fullName>
    <active>true</active>
    <description>Require FOI received date when at awaiting review</description>
    <errorConditionFormula>AND(!$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c,
(TEXT(Status__c) == &apos;Pending Review&apos;),
ISBLANK(Received_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Received_Date__c</errorDisplayField>
    <errorMessage>The Received Date is required</errorMessage>
</ValidationRule>