Agentforce/force-app/main/default/objects/FOI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FOI_No__c</columns>
    <columns>Status__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Received_Date__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Closed_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>